--- a/main.html
+++ b/main.html
@@ -62,7 +62,7 @@
       </div>
       <div class="about-self">
         <div class="left">
-          <img src="images/me_alone.jpg" alt="">
+          <img src="WorldBurger." alt="">
         </div>
         <div class="right">
           <h3>Hello, <strong>We're World Burger!</strong></h3>
@@ -140,22 +140,22 @@
       </div>
       <div class="portfolio-me">
         <div class="portfolio-inner">
-          <img src="images/mock1.png" alt="">
+          <img src="Burger." alt="">
           <strong>World Burger</strong>
           <h3>Pictures of World Burger</h3>
         </div>
         <div class="portfolio-inner">
-          <img src="images/mock2.png" alt="">
+          <img src="tacos." alt="">
           <strong>Mini tacos</strong>
           <h3>Pictures of mini tacos</h3>
         </div>
         <div class="portfolio-inner">
-          <img src="images/mock3.png" alt="">
+          <img src="coke." alt="">
           <strong>Coke</strong>
           <h3>Pictures of Coke</h3>
         </div>
         <div class="portfolio-inner">
-          <img src="images/mock4.png" alt="">
+          <img src="cornsalad." alt="">
           <strong>Corn salad</strong>
           <h3>Pictures of Corn salad</h3>
         </div>
