--- a/index.html
+++ b/index.html
@@ -140,22 +140,22 @@
       </div>
       <div class="portfolio-me">
         <div class="portfolio-inner">
-          <img src="Burger." alt="">
+          <img src="worldburger.png" alt="">
           <strong>World Burger</strong>
           <h3>Pictures of World Burger</h3>
         </div>
         <div class="portfolio-inner">
-          <img src="tacos." alt="">
+          <img src="tacos.png" alt="">
           <strong>Mini tacos</strong>
           <h3>Pictures of mini tacos</h3>
         </div>
         <div class="portfolio-inner">
-          <img src="coke." alt="">
+          <img src="coke.png" alt="">
           <strong>Coke</strong>
           <h3>Pictures of Coke</h3>
         </div>
         <div class="portfolio-inner">
-          <img src="cornsalad." alt="">
+          <img src="cornsalad.png" alt="">
           <strong>Corn salad</strong>
           <h3>Pictures of Corn salad</h3>
         </div>
