--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="do-me">                
         <div class="do-inner">
           <div class="icon">
-            <i class="fa-brands fa-html5"></i>
+            <i class="fa-solid fa-burger"></i>
           </div>
           <div class="content">
             <h3>World Burger</h3>
@@ -108,7 +108,7 @@
         </div>        
         <div class="do-inner">
           <div class="icon">
-            <i class="fa-brands fa-css3-alt"></i>        
+            <i class="fa-solid fa-hotdog"></i>        
           </div>
           <div class="content">
             <h3>Mini tacos</h3>
@@ -117,7 +117,7 @@
         </div>
         <div class="do-inner">
           <div class="icon">
-            <i class="fa-brands fa-bootstrap"></i>
+            <i class="fa-solid fa-mug-saucer"></i>
           </div>
           <div class="content">
             <h3>Coke</h3>
