--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
       <div class="about-self">
         <div class="left">
-          <img src="WorldBurger." alt="">
+          <img src="worldburger.png" alt="">
         </div>
         <div class="right">
           <h3>Hello, <strong>We're World Burger!</strong></h3>
