--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
           <p>We make organic burgers!</p>
           <p>If you want to buy it, just push "주문하기" in the first page!.</p>
           <div class="social">
-            <a href="#">
+            <a href="./a.html">
               <i class="fa-brands fa-facebook"></i>
             </a>
-            <a href="#">
+            <a href="./a.html">
               <i class="fa-brands fa-instagram"></i>
             </a>
-            <a href="#">
+            <a href="./a.html">
               <i class="fa-brands fa-twitch"></i>
             </a>
-            <a href="#">
+            <a href="./a.html">
               <i class="fa-brands fa-youtube"></i>
             </a>
           </div>
@@ -113,7 +113,7 @@
           </div>
           <div class="content">
             <h3>Mini tacos</h3>
-            <p>We make mini tacos with ---</p>
+            <p>We make mini tacos with </p>
           </div>
         </div>
         <div class="do-inner">
