--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h4>Welcome</h4>
       <h2 class="active">We sell <span></span></h2>
       <p>안녕하세요!월드버거 입니다!</p>
-      <button class="download">주문하기</button>
+      <button class="download"><a href="./b.html">주문하기</a></button>
       <button class="mouse"><i class="fa-solid fa-computer-mouse"></i></button>
     </div>
   </main>
