--- a/b.html
+++ b/b.html
@@ -1,1 +1,2 @@
 <h1>Sorry!Something went wrong!Please try again 40000 years later! :(</h1>
+<h2>Error code : 40000 (Try again 40000 years later!!)</h2>
