--- a/a.html
+++ b/a.html
@@ -1,2 +1,3 @@
 <h1>Sorry!We do not have that social site's account! :(</h1>
+<h2>Error code : 40000 (Try again 40000 years later!!)</h2>
 <img src="./error.png">
