--- a/a.html
+++ b/a.html
@@ -5,6 +5,6 @@
   <body>
     <h1>Sorry!We do not have that social site's account! :(</h1>
     <h2>Error code : 40000 (Try again 40000 years later!!)</h2>
-    <img src="./error.png",width="10",height="10">
+    <img src="./error.png",width="10",height="10",style="float: right;">
   </body>
 </html>
