--- a/b.html
+++ b/b.html
@@ -5,6 +5,6 @@
   <body>
     <h1>Sorry!Something went wrong!Please try again 40000 years later! :(</h1>
     <h2>Error code : 40000 (Try again 40000 years later!!)</h2>
-    <img src="./error2.png",width="10",height="10">
+    <img src="./error2.png",width="10",height="10",style="float: right;">
   </body>
 </html>
