--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </div>
           <div class="content">
             <h3>Mini tacos</h3>
-            <p>We make mini tacos with </p>
+            <p>We make mini tacos!Delicious!</p>
           </div>
         </div>
         <div class="do-inner">
@@ -121,8 +121,8 @@
             <i class="fa-solid fa-mug-saucer"></i>
           </div>
           <div class="content">
-            <h3>Coke</h3>
-            <p>The coke is very 'NORMAL' ㅠㅠ</p>
+            <h3>Coka cola</h3>
+            <p>The cola is very 'NORMAL' ㅠㅠ</p>
           </div>
         </div>
       </div>
@@ -152,8 +152,8 @@
         </div>
         <div class="portfolio-inner">
           <img src="coke.png" alt="">
-          <strong>Coke</strong>
-          <h3>Pictures of Coke</h3>
+          <strong>Coka cola</strong>
+          <h3>Pictures of Coka cola</h3>
         </div>
         <div class="portfolio-inner">
           <img src="cornsalad.png" alt="">
