--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <i class="fa-solid fa-mug-saucer"></i>
           </div>
           <div class="content">
-            <h3>Coka cola</h3>
+            <h3>Coca cola</h3>
             <p>The cola is very 'NORMAL' ㅠㅠ</p>
           </div>
         </div>
@@ -152,8 +152,8 @@
         </div>
         <div class="portfolio-inner">
           <img src="coke.png" alt="">
-          <strong>Coka cola</strong>
-          <h3>Pictures of Coka cola</h3>
+          <strong>Coca cola</strong>
+          <h3>Pictures of Coca cola</h3>
         </div>
         <div class="portfolio-inner">
           <img src="cornsalad.png" alt="">
