--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <h2 class="active">We sell <span></span></h2>
       <p>안녕하세요!월드버거 입니다!</p>
       <button class="download"><a href="./b.html">주문하기</a></button>
-      <button class="mouse"><i class="fa-solid fa-computer-mouse"></i></button>
+      <button class="mouse"><a href="c.html"><i class="fa-solid fa-computer-mouse"></i></a></button>
     </div>
   </main>
   <!-- //end Main -->
