--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
               <label for="msg">message</label>
               <textarea id="msg"></textarea>
             </div>
-            <button>send</button>
+            <button><a href="d.html">send</a></button>
           </form>
         </div>
       </div>
