--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
               <label for="msg">message</label>
               <textarea id="msg"></textarea>
             </div>
-            <button><a href="./d.html">send</a></button>
+            <a href="./d.html"><button>send</button></a>
           </form>
         </div>
       </div>
