--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
               <label for="msg">message</label>
               <textarea id="msg"></textarea>
             </div>
-            <a href="./d.html"><button>send</button></a>
+            <a href="d.html"><button>send</button></a>
           </form>
         </div>
       </div>
